Fix pw strength module spacing
**Why**: because it was off

--- a/app/assets/stylesheets/components/_password.scss
+++ b/app/assets/stylesheets/components/_password.scss
@@ -8,12 +8,12 @@ $good: #9ac056;
 $great: #00b200;
 
 // scss-lint:disable IdSelector
-#pw-strength-cntnr { margin-top: -1.5rem; }
+#pw-strength-cntnr { margin-top: -1rem; }
 
 .pw-bar {
   background-color: #e9e9e9;
   border: $space-tiny solid #fff;
-  border-radius: 5px;
+  border-radius: 6px;
   box-sizing: border-box;
   float: left;
   height: 16px;
